2.2 - Unreleased

2.1 - 2017-01-14
  * Internals:
    - Adding internal documentation
    - Extract code to submodules for easier separation of concerns
  * New features:
    - Support for templates for installing things with specified options
      (https://github.com/pink-mist/sbotools/issues/38)
    - Display other README files if the slackbuild comes with them
      (https://github.com/pink-mist/sbotools/issues/49)
  * Bugfixes
    - sboinstall/sboremove disagreeing about a package being installed
      (https://github.com/pink-mist/sbotools/issues/44)
    - sbocheck and sboupgrade misinterpreting version strings
      (https://github.com/pink-mist/sbotools/issues/45)
    - parsing .info files without leading space on second line
      (https://github.com/pink-mist/sbotools/issues/46)
    - local git repo gets partially chowned to root
      (https://github.com/pink-mist/sbotools/issues/47)
    - stop excluding .tar.gz files when rsyncing
      (https://github.com/pink-mist/sbotools/issues/53)

2.0 - 2016-07-02
  * Major new features
    * LOCAL_OVERRIDES setting
      Allows to keep a directory with local slackbuild dirs that will override
      whatever is found in the regular repository.
       - https://github.com/pink-mist/sbotools/issues/8
       - https://github.com/pink-mist/sbotools/issues/13
       - https://github.com/pink-mist/sbotools/issues/14
       - https://github.com/pink-mist/sbotools/issues/15
       - https://github.com/pink-mist/sbotools/issues/19
       - https://github.com/pink-mist/sbotools/issues/20
    * SLACKWARE_VERSION setting
      Allows to specify the slackware version to sync from SBo. Previously only
      the version in your /etc/slackware-version was used for this, and if that
      had gotten updated in -current, you'd have needed to wait both for a new
      version of sbotools, as well as SBo to get the new repository online
      before sbotools would work for you again.