@@ -1,4 +1,6 @@
 2.2 - Unreleased
+  *  Bugfix for parsing .info files with trailing whitespace after a value
+     (https://github.com/pink-mist/sbotools/issues/54)
 
 2.1 - 2017-01-14
   * Internals:
